// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteFilterListModal false canDeleteFilter privilege renders as disabled delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as delete button after opening and closing modal 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as disabled delete button when no lists selected 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as enabled delete button when a list is selected 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders modal after clicking delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    fill={false}
    iconSide="left"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
  <EuiOverlayMask>
    <EuiConfirmModal
      buttonColor="danger"
      cancelButtonText={
        <FormattedMessage
          defaultMessage="Cancel"
          id="xpack.ml.settings.filterLists.deleteFilterListModal.cancelButtonLabel"
          values={Object {}}
        />
      }
      className="eui-textBreakWord"
      confirmButtonText={
        <FormattedMessage
          defaultMessage="Delete"
          id="xpack.ml.settings.filterLists.deleteFilterListModal.confirmButtonLabel"
          values={Object {}}
        />
      }
      defaultFocusedButton="confirm"
      onCancel={[Function]}
      onConfirm={[Function]}
      title={
        <FormattedMessage
          defaultMessage="Delete {selectedFilterListsLength, plural, one {{selectedFilterId}} other {# filter lists}}"
          id="xpack.ml.settings.filterLists.deleteFilterListModal.modalTitle"
          values={
            Object {
              "selectedFilterId": "web_domains",
              "selectedFilterListsLength": 2,
            }
          }
        />
      }
    >
      <p>
        <FormattedMessage
          defaultMessage="Are you sure you want to delete
{selectedFilterListsLength, plural, one {this filter list} other {these filter lists}}"
          id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteWarningMessage"
          values={
            Object {
              "selectedFilterListsLength": 2,
            }
          }
        />
      </p>
    </EuiConfirmModal>
  </EuiOverlayMask>
</div>
`;
